force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/TVE_AzureB2CAuthProvider__mdt.object-meta.xml
<CustomObject>
    <description>Information required by the Custom Auth. Provider AzureB2C</description>
    <label>TVE_AzureB2CAuthProvider</label>
    <pluralLabel>TVE_AzureB2CAuthProviders</pluralLabel>
</CustomObject>