force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/AuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderName__c</fullName>
    <label>AuthProviderName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>