force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/CommunityHome__c.field-meta.xml
<CustomField>
    <fullName>CommunityHome__c</fullName>
    <label>CommunityHome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>