force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/Forgot_Password_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Password_Error_Code__c</fullName>
    <label>Forgot Password Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>