force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/Partner_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_URL__c</fullName>
    <label>Partner Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>