force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/PasswordPolicy__c.field-meta.xml
<CustomField>
    <fullName>PasswordPolicy__c</fullName>
    <label>PasswordPolicy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>