force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>