force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/PortalName__c.field-meta.xml
<CustomField>
    <fullName>PortalName__c</fullName>
    <label>PortalName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>