force-app/main/default/objects/TVE_AzureB2CAuthProvider__mdt/fields/Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>